# cmake-learning

1_BuildingC++Projectwith_g++/: addition.cpp  print_result.cpp
2_BuildingFirstTarget/: CMakeLists.txt  division.cpp  division.h  main.cpp
2_BuildingFirstTarget/my_build_dir/: CMakeCache.txt  Makefile  calculator  cmake_install.cmake
3_ManagingProjFilesFolders/: CMakeLists.txt
3_ManagingProjFilesFolders/my_math/: CMakeLists.txt
3_ManagingProjFilesFolders/my_math/include/my_math/: addition.h
3_ManagingProjFilesFolders/my_math/src/: division.cpp
4_VariablesListsStrings/: CMakeLists.txt
5_ControlFlowCmds_Functions_Macros_ListFiles/: CMakeLists.txt  CMakeListsBinaryTests).txt  CMakeListsQuiz5_1.txt  CMakeListsQuiz5_2.txt  CMakeLists_ForIterator.txt  CMakeLists_Function.txt  CMakeLists_FunctionScope.txt  CMakeLists_FunctionsMacros.txt  CMakeLists_OptionalArguments.txt  CMakeLists_PARENT_SCOPE.txt  CMakeLists_Quiz5_3.txt  CMakeLists_UnaryTests.txt  CMakeLists_UnaryTests1.txt  CMakeLists_UnaryTests2.txt  CMakeLists_WhileLoop.txt
5_ControlFlowCmds_Functions_Macros_ListFiles/module5b/: CMakeLists.txt  my_module.cmake
6_CacheVariables/: CMakeLists.txt  main.cpp
6_CacheVariables/my_math/: CMakeLists.txt
6_CacheVariables/my_print/: CMakeLists.txt
7_Installing_ExportingPackage/: CMakeLists.txt  calculator
7_Installing_ExportingPackage/my_math/: CMakeLists.txt
7_Installing_ExportingPackage/my_math/src/: addition.cpp
7_Installing_ExportingPackage/my_print/src/: print_result.cpp
9_LinkingExternalLibraries/App_OpenCV/: CMakeLists.txt  main.cpp
(+1 files in other folders)
